--- a/HTML.html
+++ b/HTML.html
@@ -12,22 +12,10 @@
         
         ---------- <br>
         <p><a href="https://www.w3.org/TR/html5/" target="_blank" title="HTML5 specification">hyper text Markup Language (HTML)</a> is the standard markup Language for <strong>creating <u>web</u> pages</strong> and web application. 
-            <img src="https://images.unsplash.com/photo-1696187025297-6082c54a99c0?ixlib=rb-4.0.3&q=85&fm=jpg&crop=entropy&cs=srgb&dl=kristaps-ungurs--8E9FKTB_Ps-unsplash.jpg" width="100%"> 
         </p><p style="margin: top 80px;">HTML elements are the building blocks of HTML pages. With HTML constructs, images and other objects such as interactuve forms, may be embeded in to ther rendered page. It provideds a means to creates structured documents by denoting.</HTMl></p>
 
-        <table>
-            <tr>
-                <td>head</td>
-                <td>98.1%</td>
-            </tr>
-            <tr>
-                <td>body</td>
-                <td>97.9%</td>
-            </tr>
-            <tr>
-                <td>html</td>
-                <td>97.9%</td>
-            </tr>
-        </table>
+        <p> <iframe width="560" height="315" src="https://www.youtube.com/embed/tZooW6PritE?si=A8JFhK0h2jh3AnRT" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
+
+
     </body>
 </html>
